# python

./: README.md  pyproject.toml  setup.cfg
marcelle/: __init__.py  data_store.py  keras_callback.py  remote.py  training_server.py  uploader.py  utils.py  writer.py
