[tool.poetry]
name = "marcelle"
version = "0.0.5"
description = "Python package for interacting with Marcelle"
authors = ["Jules Françoise <me@julesfrancoise.com>"]
maintainers = ["Jules Françoise <me@julesfrancoise.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://marcelle.dev/"
repository = "https://github.com/marcellejs/python/"
documentation = "https://marcelle.dev/api/python.html"
keywords = [
    "Marcelle",
    "Interactive Machine Learning",
    "Tensorflow",
    "Tensorflow.js",
    "Keras",
    "ONNX"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.4"
tensorflow = "^2.10.0"
tensorflowjs = "^3.21.0"
tqdm = "^4.64.1"
filetype = "^1.2.0"
requests = "^2.28.1"
tf2onnx = "^1.13.0"
python-socketio = "4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
