[tool.poetry]
name = "marcelle"
version = "0.0.5"
description = "Python package for interacting with Marcelle"
authors = ["Jules Françoise <me@julesfrancoise.com>"]
maintainers = ["Jules Françoise <me@julesfrancoise.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://marcelle.dev/"
repository = "https://github.com/marcellejs/python/"
documentation = "https://marcelle.dev/api/python.html"
keywords = [
    "Marcelle",
    "Interactive Machine Learning",
    "Tensorflow",
    "Tensorflow.js",
    "Keras",
    "ONNX"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
python-socketio = "4.6.1"
tensorflowjs = "^4.4.0"
tqdm = "^4.65.0"
requests = "^2.28.2"
tf2onnx = "^1.14.0"
filetype = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
