[metadata]
# replace with your username:
name = marcelle
version = 0.0.4
author = Jules Françoise
author_email = jules.francoise@limsi.fr
description = Python package for interacting with Marcelle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcellejs/python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.6
install_requires =
    filetype
    requests
    tensorflow
    tensorflowjs
    keras2onnx
    numpy
    tqdm
